@@ -196,7 +196,10 @@ Version 3.5.1
 </td>
 
 
-<td><a href="http://downloads.sourceforge.net/md5deep/md5deep/md5deep-3.5.1.zip">
+<!-- RBF - UPDATE Old download links? -->
+
+
+<td><a href="http://downloads.sourceforge.net/md5deep/md5deep/md5deep-3.5.1/md5deep-3.5.1.zip">
        Windows binary</a></td>
 <td class="hash"> SHA256 8be48ae77fde088747f97e626bd81918cde9f7e5af3b8247a30e8c7def11b153
 	</td>
@@ -205,7 +208,7 @@ Version 3.5.1
 
 
      <tr>
- <td><a href="http://downloads.sourceforge.net/md5deep/md5deep/md5deep-3.5.1.tar.gz">
+ <td><a href="http://downloads.sourceforge.net/md5deep/md5deep-3.5.1/md5deep-3.5.1.tar.gz">
  source code</a></td>
  <td class="hash"> SHA256 a6a29f9892fa3a4a48bee0da341fd5dad5cdcdc2aecc521b28cf0b652bb3c415
 	 </td>
